Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Private Beta
-
None
-
None
Description
If you restart a cluster and some tablets are slow to bootstrap, the master UI doesn't show the bootstrapping replicas on the "table" page. This makes it hard for the admin to go ssh into those nodes and look at logs, or otherwise diagnose why it's taking a long time.
We should report them, perhaps with some flag that says "BOOTSTRAPPING", and even potentially push a the bootstrap status message up to the master to make it more obvious how far along they are.
Attachments
Issue Links
- is related to
-
KUDU-849 TS may miss alter schema command if it races with the first tablet report
-
- Resolved
-